@@ -1,3 +1,9 @@
+2006-10-12  Marcus Brinkmann  <marcus@g10code.de>
+
+	* configure.ac (FALLBACK_SOCKLEN_T): Third time is a charm.
+	Define gcry_socklen_t, to avoid conflicts with socklen_t
+	definitions by autoconf.
+
 2006-10-11  Marcus Brinkmann  <marcus@g10code.de>
 
 	* configure.ac (FALLBACK_SOCKLEN_T): Rewrite in terms of
